named-item-derive/tests/ui/fail_missing_history.stderr
error: history=true but no `name_history: Vec<String>` field found.
 --> tests/ui/fail_missing_history.rs:8:8
  |
8 | struct MissingHistoryField {
  |        ^^^^^^^^^^^^^^^^^^^
